--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 	<script egret="game" src="bin-debug/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
 	<script egret="game" src="bin-debug/ThemeAdapter.js"></script>
+	<script egret="game" src="bin-debug/base/socket/MyByteArray.js"></script>
+	<script egret="game" src="bin-debug/base/socket/MySocket.js"></script>
 	<!--game_files_end-->
 </head>
 <body>
